--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,7 @@
       </div>
 
       <div class="footer">
-        <p></p>
+        <p><span id="date"></span> <span id="value"></span></p>
       </div>
     </div>
 
@@ -52,6 +52,8 @@
     <!-- bower:js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/d3/d3.js"></script>
+    <script src="/bower_components/moment/moment.js"></script>
+    <script src="/bower_components/moment-timezone/builds/moment-timezone-with-data-2010-2020.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
